# async-mqtt5

./: CMakeLists.txt  LICENSE  README.md  SConscript  codecov.yml  vcpkg.json
.github/workflows/: ci-posix.yml  ci-windows.yml  ci.yml  coverage.yml  docs.yml
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
doc/: Jamfile  config.json  doxy2qbk.sh  reference.dox  reference.xsl
doc/qbk/: 00_main.qbk  01_intro.qbk  02_configuring_the_client.qbk  02_examples.qbk  02_getting_started.qbk  03_auto_reconnect.qbk  04_examples.qbk  04_maintaining_a_stable_connection.qbk  05_optimising_communication.qbk  06_disconnecting_the_client.qbk  07_asio_compliance.qbk  08_allocators.qbk  09_per_op_cancellation.qbk  10_examples.qbk  10_executors.qbk  11_multithreading.qbk  12_examples.qbk  15_examples.qbk
doc/qbk/examples/: Asio_compatibility.qbk  Basic_examples.qbk  Completion_tokens.qbk  Examples.qbk  Network_connection.qbk  Tutorial.qbk
doc/qbk/helpers/: ExecutionContext.qbk  Reason_codes.qbk  StreamType.qbk  TlsContext.qbk  quickref.xml  rcref.xml
doc/qbk/reference/: Error_handling.qbk  ExecutionContext.qbk  TlsContext.qbk  quickref.xml
doc/qbk/reference/concepts/: ExecutionContext.qbk  LoggerType.qbk  StreamType.qbk  TlsContext.qbk  is_authenticator.qbk
doc/qbk/reference/properties/: AUTH_props.qbk  CONNACK_props.qbk  CONNECT_props.qbk  DISCONNECT_props.qbk  PUBACK_props.qbk  PUBCOMP_props.qbk  PUBLISH_props.qbk  PUBREC_props.qbk  PUBREL_props.qbk  Properties.qbk  SUBACK_props.qbk  SUBSCRIBE_props.qbk  UNSUBACK_props.qbk  UNSUBSCRIBE_props.qbk  Will_props.qbk  auth_props.qbk  connack_props.qbk  connect_props.qbk  disconnect_props.qbk  puback_props.qbk  pubcomp_props.qbk  publish_props.qbk  pubrec_props.qbk  pubrel_props.qbk  suback_props.qbk  subscribe_props.qbk  unsuback_props.qbk  unsubscribe_props.qbk  will_props.qbk
doc/qbk/reference/reason_codes/: Reason_codes.qbk  rcref.xml
doc/xsl/: custom-overrides.xsl
example/: CMakeLists.txt  basic_examples.cpp  callbacks.cpp  cpp20_coroutines.cpp  futures.cpp  hello_world_in_coro_multithreaded_env.cpp  hello_world_in_multithreaded_env.cpp  hello_world_over_tcp.cpp  hello_world_over_tls.cpp  hello_world_over_websocket_tcp.cpp  hello_world_over_websocket_tls.cpp  multiflight_client.cpp  network_connection.cpp  openssl-tls.cpp  openssl_tls.cpp  publisher.cpp  receiver.cpp  tcp.cpp  timeout_with_awaitable_operators.cpp  timeout_with_parallel_group.cpp  websocket-tcp.cpp  websocket-tls.cpp  websocket_tcp.cpp  websocket_tls.cpp
example/src/: run_examples.cpp
include/: async_mqtt5.hpp
include/async_mqtt5/: error.hpp  logger.hpp  logger_traits.hpp  mqtt_client.hpp  property_types.hpp  reason_codes.hpp  types.hpp  websocket.hpp
include/async_mqtt5/detail/: any_authenticator.hpp  async_mutex.hpp  async_traits.hpp  cancellable_handler.hpp  channel_traits.hpp  control_packet.hpp  internal_types.hpp  log_invoke.hpp  rebind_executor.hpp  ring_buffer.hpp  spinlock.hpp  topic_validation.hpp  traits.hpp  utf8_mqtt.hpp
include/async_mqtt5/impl/: assemble_op.hpp  async_sender.hpp  autoconnect_stream.hpp  client_service.hpp  connect_op.hpp  disconnect_op.hpp  endpoints.hpp  ping_op.hpp  publish_rec_op.hpp  publish_send_op.hpp  re_auth_op.hpp  read_message_op.hpp  read_op.hpp  reconnect_op.hpp  replies.hpp  run_op.hpp  sentry_op.hpp  subscribe_op.hpp  unsubscribe_op.hpp  write_op.hpp
include/async_mqtt5/impl/codecs/: base_decoders.hpp  base_encoders.hpp  message_decoders.hpp  message_encoders.hpp  traits.hpp
include/async_mqtt5/impl/internal/alloc/: memory.h  memory_resource.h  (+2 more)
include/boost/: mqtt5.hpp
include/boost/mqtt5/: error.hpp  logger.hpp  logger_traits.hpp  mqtt_client.hpp  property_types.hpp  reason_codes.hpp  ssl.hpp  types.hpp  websocket.hpp  websocket_ssl.hpp
include/boost/mqtt5/detail/: any_authenticator.hpp  async_mutex.hpp  async_traits.hpp  cancellable_handler.hpp  channel_traits.hpp  control_packet.hpp  internal_types.hpp  log_invoke.hpp  rebind_executor.hpp  shutdown.hpp  topic_validation.hpp  traits.hpp  utf8_mqtt.hpp
include/boost/mqtt5/impl/: assemble_op.hpp  async_sender.hpp  autoconnect_stream.hpp  client_service.hpp  connect_op.hpp  disconnect_op.hpp  endpoints.hpp  ping_op.hpp  publish_rec_op.hpp  publish_send_op.hpp  re_auth_op.hpp  read_message_op.hpp  read_op.hpp  reconnect_op.hpp  replies.hpp  run_op.hpp  sentry_op.hpp  shutdown_op.hpp  subscribe_op.hpp  unsubscribe_op.hpp  write_op.hpp
meta/: libraries.json
test/: CMakeLists.txt
test/experimental/: cancellation.cpp  memory.cpp  message_assembling.cpp  mutex.cpp  uri_parse.cpp
test/include/test_common/: delayed_op.hpp  message_exchange.hpp  packet_util.hpp  protocol_logging.hpp  test_authenticators.hpp  test_autoconnect_stream.hpp  test_broker.hpp  test_service.hpp  test_stream.hpp
test/integration/: async_sender.cpp  cancellation.cpp  client.cpp  client_functions.cpp  coroutine.cpp  disconnect.cpp  executors.cpp  malformed_packet.cpp  mqtt_features.cpp  ping.cpp  publish_receive.cpp  publish_send.cpp  re_authentication.cpp  read_message.cpp  receive_publish.cpp  resending.cpp  send_publish.cpp  sub_unsub.cpp
test/src/: run_tests.cpp
test/unit/: CMakeLists.txt  async_mutex.cpp  compilation_checks.cpp  connect_op.cpp  default_completion_tokens.cpp  disconnect_op.cpp  error.cpp  logger.cpp  publish_send_op.cpp  reconnect_op.cpp  serialization.cpp  session.cpp  string_validation.cpp  subscribe_op.cpp  traits.cpp  unsubscribe_op.cpp
test/unit/include/test_common/: delayed_op.hpp  message_exchange.hpp  packet_util.hpp  protocol_logging.hpp  test_broker.hpp  test_service.hpp  test_stream.hpp
test/unit/src/: run_tests.cpp
test/unit/test/: cancellation.cpp  client_broker.cpp  compilation_checks.cpp  coroutine.cpp  publish_rec_op.cpp  publish_send_op.cpp  serialization.cpp  session.cpp  string_validation.cpp  subscribe_op.cpp  unsubscribe_op.cpp  utf8_mqtt.cpp
tools/: ci.py
win/: mqtt-client.sln  mqtt-client.vcxproj  mqtt-client.vcxproj.filters
win/test/: mqtt-test.vcxproj  mqtt-test.vcxproj.filters
(+9 files in other folders)
